@@ -1,3 +1,5 @@
+HEAD
+	+ Do not listen on internal interfaces
 4.0
 	+ Remove ads on deprecated features
 	+ Set version to 4.0
