@@ -1,3 +1,5 @@
+HEAD
+	+ Show error in module status table
 4.0
 	+ Better check of versions numbers in backup restore
 	+ Make EBox::MyDBEngine more reusable
